--- a/static/styles.css
+++ b/static/styles.css
@@ -143,6 +143,12 @@ body {
     font-style: normal;
     font-size: 22px;
     line-height: 1.5;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+footer {
+    font-size: 14px;
 }
 
 pre {
