--- a/static/styles.css
+++ b/static/styles.css
@@ -158,3 +158,9 @@ pre {
 .align-right {
     text-align: right;
 }
+
+p > code {
+    font-size: 18px;
+    background: #ddd;
+    padding: 2px 2px;
+}
